--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -48,3 +48,23 @@
 .form-login button:hover {
   background-color: #0563cc;
 }
+
+.login-term {
+  display: flex;
+  gap: 5px;
+  font-size: 12px;
+  color: #808080;
+}
+
+.login-forgot {
+  font-size: 13px;
+  color: #5c5c5c;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.login-toggle span {
+  color: #077eff;
+  font-weight: 500;
+  cursor: pointer;
+}
